--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,9 +4,9 @@
     <title>Taming Thymeleaf</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <!-- this is where we refer the css file from src/main/resources/static/main.css -->
-    <link th:href="@{/main.css}" rel="stylesheet" /> 
+    <link th:href="@{/app.css}" rel="stylesheet" /> 
 </head>
 <body>
-    <h1 class="mt-2 text-xl my-header" th:text="'Hello Spring Boot'"></h1>
+    <h1 class="mt-2 text-xl my-header" th:text="'Spring boot app'"></h1>
 </body>
 </html>
